# flask-mongodb

./: Makefile  pyproject.toml
src/flask_mongodb/: __init__.py  flask_mongodb.py
tests/: test_flask_mongodb.py
