[tool.poetry]
name = "flask-mongodb"
version = "0.1.0"
description = ""
authors = ["PenseeProfonde <cameronrmarch@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^2.1.1"
pymongo = "^4.1.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^22.3.0"
pylint = "^2.13.4"
mypy = "^0.942"
pytest-cov = "^3.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
